deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
     app.kubernetes.io/name: nginx
  name: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - image: nginx:latest
          name: nginx
          ports:
          - containerPort: 80
